top section added

--- a/style.css
+++ b/style.css
@@ -3,12 +3,24 @@ body{
     margin: 0;
 }
 
-h1{
+.top-banner{
+    width: 80%;
     display: flex;
-    color: white;
-    height: 80px;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
+    margin: 100px 30px;
+}
 
+.top-content{
+    max-width: 100%;
+    color: rgb(255, 255, 255);
+    width: auto;
+    font-size: 75px;
+}
+
+
+
+.top-img{
+    max-width: 30%;
+    height: auto;
+    padding-left: 200px;
+    margin-top: -50px;
 }
