--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 body{
     background-color: rgba(27, 27, 27, 0.449);
     margin: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
+/* top section start */
 .top-banner{
-    width: 80%;
+    width: 75%;
     display: flex;
     margin: 100px 30px;
 }
@@ -13,14 +15,178 @@ body{
     max-width: 100%;
     color: rgb(255, 255, 255);
     width: auto;
-    font-size: 75px;
+    font-size: 65px;
+    font-weight: 900;
 }
 
+.top-highlight{
+    color: yellow;
+    font-weight: 1000;
+}
 
+.top-p{
+    color: whitesmoke;
+    font-size: 25px;
+}
 
+.order-btn{
+    color: white;
+    background-color: rgb(23, 112, 99);
+    font-size: 25px;
+    padding: 10px 20px;
+    border-radius: 30px;
+    border: 0;
+}
 .top-img{
     max-width: 30%;
     height: auto;
     padding-left: 200px;
     margin-top: -50px;
 }
+
+/* top section end */
+
+
+/* about section start */
+
+
+.about{
+    display: flex;
+    width: 100%;
+    height: auto;
+    background-image: url(images/7.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.about-img{
+    width: 80%;
+    height: auto;
+    text-align: center;
+}
+
+.about-img img{
+    width: 50%;
+    height: auto;
+    margin-top: 55px;
+}
+.about-content{
+    width: 120%;
+    height: auto;
+    padding: 80px 100px;
+}
+.about-content h1{
+    color: #fff;
+    font-size: 40px;
+}
+
+.about-content p{
+    color: #fff;
+    text-align: justify;
+
+}
+/* about section end */
+
+/* recipies section start */
+.recipies{
+    color: #fff;
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+.recipies h1{
+    font-size: 40px;
+}
+
+.recipies p {
+    padding: 0 250px;
+}
+
+
+.card{
+    display: flex;
+    width: 90%;
+    height: auto;
+    margin: 0 auto;
+
+}
+
+.card-item{
+    width: 100%;
+    margin: 0 50px;
+    margin-bottom:100px ;
+    border-radius: 33px;
+    background-color: rgba(255, 255, 255, 0.644);
+    box-shadow: 5px 10px 20px rgb(0, 0, 0);
+}
+
+.card-item img {
+    width: 100%;
+    height: auto;
+}
+
+.card-item h2{
+    color: rgb(26, 26, 26);
+    padding: 0 40px;
+}
+
+.card-item p{
+    color: rgb(26, 26, 26);
+    padding: 0 40px;
+}
+
+
+/* number count section start */
+
+.count{
+    width: 80%;
+    height: auto;
+    margin: auto;
+    display: flex;
+    border-radius: 20px;
+    box-shadow: 5px 10px 20px rgb(99, 99, 99);
+}
+
+.count div{
+    width: 100%;
+    height: auto;
+    align-content: center;
+}
+
+.count h1{
+    color: #fff;
+    font-size: 45px;
+    text-align: center;
+    margin-bottom: -50px;
+}
+
+.count h6{
+    color: #fff;
+    font-size: 20px;
+    text-align: center;
+}
+
+/* number count section start */
+
+/* footer section start */
+.footer{
+    background-color: black;
+    width: 100%;
+    height: 200px;
+    color: #fff;
+    text-align: center;
+    margin-top: 100px;
+    padding-top: 30px;
+}
+
+.footer h1{
+    font-size: 35px;
+    margin-bottom: -20px;
+}
+
+.highlight{
+    color: aqua;
+    font-weight: bold;
+}
+
+/* footer section end */
